--- a/src/app/dialog-contact-details/dialog-contact-details.component.html
+++ b/src/app/dialog-contact-details/dialog-contact-details.component.html
@@ -39,7 +39,7 @@
 
                 <div>
                     <h3>Tasks for {{ contactData.firstName }}:</h3>
-                    <h3>{{ taskLength }}</h3>
+                    <h3 class="task-length">{{ taskLength }}</h3>
                 </div>
             </div>
         </div>
