--- a/src/app/dialog-edit-contact/dialog-edit-contact.component.html
+++ b/src/app/dialog-edit-contact/dialog-edit-contact.component.html
@@ -8,7 +8,7 @@
     </button>
 
     <div class="task-h">
-        <h1>Add contact</h1>
+        <h1>Edit contact</h1>
     </div>
 
     <div class="task-box">
@@ -34,7 +34,7 @@
     </div>
 
     <div class="button-box">
-        <div (click)="openDialogArchivedTask(contactData.id)" matTooltip="Archived task" matTooltipPosition="below"
+        <div (click)="openDialogDeleteContact(contactData.id)" matTooltip="Delete Contact" matTooltipPosition="below"
             matTooltipClass="tooltip-blue">
             <mat-icon>delete</mat-icon>
         </div>
