--- a/src/app/dialog-contact-details/dialog-contact-details.component.scss
+++ b/src/app/dialog-contact-details/dialog-contact-details.component.scss
@@ -1,5 +1,5 @@
 .details-container {
-    margin-top: 12vh;
+    margin-top: 8vh;
     color: var(--font);
 }
 
@@ -104,4 +104,9 @@
 
 .mt-24 {
     margin-top: 24px !important;
+}
+
+.task-length {
+    font-size: 24px;
+    font-weight: 600;
 }
