--- a/src/app/dialog-contact-details/dialog-contact-details.component.scss
+++ b/src/app/dialog-contact-details/dialog-contact-details.component.scss
@@ -110,3 +110,10 @@
     font-size: 24px;
     font-weight: 600;
 }
+
+.task-length-hover {
+    &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
+}
