work on archiv and delee tasks

--- a/src/app/dialog-contact-details/dialog-contact-details.component.html
+++ b/src/app/dialog-contact-details/dialog-contact-details.component.html
@@ -39,7 +39,9 @@
 
                 <div>
                     <h3>Tasks for {{ contactData.firstName }}:</h3>
-                    <h3 *ngIf="taskLength >= 1" class="task-length task-length-hover" (click)="openDialogContactTasks(contactTasks, contactData.firstName)">{{ taskLength }}</h3>
+                    <h3 *ngIf="taskLength >= 1" class="task-length task-length-hover" (click)="openDialogContactTasks(contactTasks, contactData.firstName)"
+                        matTooltip="Open Tasks" matTooltipPosition="below" matTooltipClass="tooltip-blue">
+                        {{ taskLength }}</h3>
                     <h3 *ngIf="taskLength == 0" class="task-length">{{ taskLength }}</h3>
                 </div>
             </div>
