--- a/src/app/dialog-request/dialog-request.component.html
+++ b/src/app/dialog-request/dialog-request.component.html
@@ -33,3 +33,12 @@
         <div (click)="deleteContactDoc()">Delete contact</div>
     </div>
 </div>
+
+<div *ngIf="deleteTask" class="request-box">
+    <h1>Are you sure?</h1>
+
+    <div class="btn-box">
+        <div (click)="dialogRef.close()">Cancel</div>
+        <div (click)="deleteTaskDoc()">Delete task</div>
+    </div>
+</div>
