--- a/src/app/dialog-task-details/dialog-task-details.component.scss
+++ b/src/app/dialog-task-details/dialog-task-details.component.scss
@@ -158,3 +158,7 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
         border-color: white;
     }
 }
+
+.mr-16 {
+    margin-right: 16px;
+}
