--- a/src/app/archiv/archiv.component.scss
+++ b/src/app/archiv/archiv.component.scss
@@ -236,3 +236,29 @@ h2 {
         color: rgba(255, 255, 255, 0.712);
     }
 }
+
+
+.delete-btn {
+    button {
+        position: absolute;
+        bottom: 46px;
+        right: 46px;
+        background: var(--header);
+        color: white;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: inset 2px 2px 0px var(--bg-light),
+            inset -1px -1px 11px #ffffff;
+
+        &:hover {
+            transform: scale3d(1.1, 1.1, 1.1);
+            transition: 225ms ease-in-out;
+        }
+    }
+
+    mat-icon {
+        margin-top: -5px;
+    }
+}
