--- a/src/app/dialog-contact-tasks/dialog-contact-tasks.component.html
+++ b/src/app/dialog-contact-tasks/dialog-contact-tasks.component.html
@@ -12,7 +12,7 @@
                     <mat-icon matTooltip="History" matTooltipPosition="above"
                         matTooltipClass="tooltip-blue">history</mat-icon>
 
-                    <mat-icon matTooltip="Delete task" matTooltipPosition="above" matTooltipClass="tooltip-blue"
+                    <mat-icon matTooltip="Archived task" matTooltipPosition="above" matTooltipClass="tooltip-blue"
                         (click)="openDialogArchivedTask(task.id)">delete</mat-icon>
                 </div>
 
