--- a/src/app/dialog-edit-contact/dialog-edit-contact.component.html
+++ b/src/app/dialog-edit-contact/dialog-edit-contact.component.html
@@ -2,16 +2,16 @@
     <mat-spinner></mat-spinner>
 </div>
 
-<div class="add-task-container"  *ngIf="contactData">
+<div class="edit-contact-container"  *ngIf="contactData">
     <button mat-icon-button class="close-btn" (click)="dialogRef.close()">
         <mat-icon>close</mat-icon>
     </button>
 
-    <div class="task-h">
+    <div class="edit-h">
         <h1>Edit contact</h1>
     </div>
 
-    <div class="task-box">
+    <div class="edit-box">
             <mat-form-field class="input-shadow input-box height-36">
                 <input matInput type="text" placeholder="First Name" [(ngModel)]="contactData.firstName">
                 <mat-icon>person</mat-icon>
