--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,1 +1,37 @@
-<p>calendar works!</p>
+<div class="container-position container-style">
+    <div class="color">
+        <span>
+            {{displayMonth}}
+        </span>
+        <span>
+            <button mat-button (click)="decreaseMonth()">-</button>
+            <button mat-button (click)="increaseMonth()">+</button>
+        </span>
+    </div>
+
+    <table class='calendar-table' *ngIf="calendar">
+        <thead>
+            <tr>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+                <th>Saturday</th>
+                <th>Sunday</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let row of calendar | chunk: 7; let i = index">
+                <td class="calendar-day" [ngClass]="{'past-date': c.isPastDate, 'today': c.isToday}"
+                    *ngFor="let c of row; let j = index">
+                    <div class="calendar-day-header" [ngClass]="{'blue-date': c.isToday}">
+                        <strong>{{c.date.getDate()}}</strong> <strong
+                            *ngIf="c.isToday || (i==0 && j==0) || (c.date.getDate() == 1)">
+                            {{monthNames[c.date.getMonth()]}}</strong>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
