--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="btn-box-left">
-            <button mat-icon-button matTooltip="Open Calendar" matTooltipPosition="right"
+            <button routerLink="/calendar" mat-icon-button matTooltip="Open Calendar" matTooltipPosition="right"
                 matTooltipClass="tooltip-blue">
                 <mat-icon>calendar_month</mat-icon>
             </button>
