--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,10 @@ body {
   height: 100%;
 }
 
+// * {
+//   border: 1px solid red;
+// }
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
