--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,34 +1,41 @@
 <div class="container-position container-style">
-    <div class="color">
+    <div class="calendar-header">
         <span>
-            {{displayMonth}}
+            {{ displayMonth }} {{ displayYear }}
         </span>
         <span>
-            <button mat-button (click)="decreaseMonth()">-</button>
-            <button mat-button (click)="increaseMonth()">+</button>
+            <button mat-icon-button (click)="decreaseMonth()" matTooltip="Last" matTooltipPosition="below"
+            matTooltipClass="tooltip-blue">
+                <mat-icon>navigate_before</mat-icon>
+            </button>
+
+            <button mat-icon-button (click)="increaseMonth()" matTooltip="Next" matTooltipPosition="below"
+            matTooltipClass="tooltip-blue">
+                <mat-icon>navigate_next</mat-icon>
+            </button>
         </span>
     </div>
 
     <table class='calendar-table' *ngIf="calendar">
         <thead>
             <tr>
-                <th>Monday</th>
-                <th>Tuesday</th>
-                <th>Wednesday</th>
-                <th>Thursday</th>
-                <th>Friday</th>
-                <th>Saturday</th>
-                <th>Sunday</th>
+                <th>Mon</th>
+                <th>Tue</th>
+                <th>Wed</th>
+                <th>Thu</th>
+                <th>Fri</th>
+                <th class="weekend">Sat</th>
+                <th class="weekend">Sun</th>
             </tr>
         </thead>
+
         <tbody>
             <tr *ngFor="let row of calendar | chunk: 7; let i = index">
-                <td class="calendar-day" [ngClass]="{'past-date': c.isPastDate, 'today': c.isToday}"
-                    *ngFor="let c of row; let j = index">
-                    <div class="calendar-day-header" [ngClass]="{'blue-date': c.isToday}">
-                        <strong>{{c.date.getDate()}}</strong> <strong
-                            *ngIf="c.isToday || (i==0 && j==0) || (c.date.getDate() == 1)">
-                            {{monthNames[c.date.getMonth()]}}</strong>
+                <td class="calendar-day" *ngFor="let c of row; let j = index"
+                    [ngClass]="{'past-date': c.isPastDate, 'today': c.isToday, 'weekend': (j==5 || j==6)}"
+                    (click)="showDate(c)">
+                    <div class="calendar-day-header">
+                        {{ c.date.getDate() }}
                     </div>
                 </td>
             </tr>
