--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -1,34 +1,50 @@
-.color {
+.calendar-header {
   color: var(--header);
   margin-left: 6rem;
+  margin-top: 20px;
+  font-weight: 600;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
 }
 
 .calendar-table {
   border-collapse: collapse;
-  width: 90%;
-  max-width: 90%;
-  margin-bottom: 1rem;
-  margin-left: 4rem;
-  border: 1px solid #dee2e6;
+  width: 99%;
+  max-width: 99%;
+  margin-left: 6px;
   background-color: #fff;
+  border-radius: 16px;
 }
 
 .calendar-table thead th {
-  vertical-align: bottom;
+  text-align: end;
   border-bottom: 2px solid #dee2e6;
   width: 14.2%;
 }
 
-.calendar-table td,
+.calendar-table td {
+  border-top: 1px solid #dee2e6;
+  border-right: 1px solid #dee2e6;
+
+  &:last-child {
+    border-right: none;
+  }
+}
+
 .calendar-table th {
-  border: 1px solid #dee2e6;
+  border-right: 1px solid #dee2e6;
+
+  &:last-child {
+    border-right: none;
+  }
 }
 
 .calendar-table td,
 .calendar-table th {
   padding: .75rem;
   vertical-align: top;
-  border-top: 1px solid #dee2e6;
+  text-align: end;
 }
 
 .calendar-day {
@@ -52,6 +68,12 @@
   background-color: rgb(248, 248, 248);
 }
 
-.blue-date {
+.today {
   color: rgb(16, 110, 190);
+  background: #e8f4ff;
+  font-weight: 600;
+}
+
+.weekend {
+  color: #df3232;
 }
