--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -264,6 +264,10 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     color: var(--font);
     margin: 0;
     font-weight: 600;
+    height: 24px;
+    max-height: 24px;
+    width: 180px;
+    overflow: hidden;
 }
 
 .task-date {
