--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,4 +1,8 @@
 <div class="container-position container-style">
+    <button mat-icon-button class="info-btn">
+        <mat-icon (mouseenter)="showLegend = !showLegend" (mouseleave)="showLegend = !showLegend">information</mat-icon>
+    </button>
+    
     <div class="calendar-header">
         <span>
             {{ displayMonth }} {{ displayYear }}
@@ -15,6 +19,14 @@
             </button>
         </span>
     </div>
+
+
+    <mat-card class="legend-card" *ngIf="showLegend">
+        <div *ngFor="let category of categoryList" [style.color]="getCategoryColor(category)">
+            <mat-icon>circle</mat-icon>
+            <span>{{ category }}</span>
+        </div>
+    </mat-card>
 
     <table class='calendar-table' *ngIf="calendar">
         <thead>
@@ -36,11 +48,14 @@
                     <div class="calendar-day-header">
                         {{ c.date.getDate() }}
                     </div>
-                    <div *ngFor="let task of shared.allTasks">
-                        <span (click)="openTaskDetails(task.id)"
-                            [ngClass]="{'hideTask': c.date.getTime() != task.dueDate, 'showTask': c.date.getTime() === task.dueDate}">
-                            {{ task.title }}
-                        </span>
+                    <div class="task-title-box">
+                        <div *ngFor="let task of shared.filterTasks">
+                            <span (click)="openTaskDetails(task.id)" [style.color]="getCategoryColor(task.category)"
+                                [ngClass]="{'hideTask': c.date.getTime() != task.dueDate, 'showTask': c.date.getTime() === task.dueDate}"
+                                matTooltip="{{task.title}}" matTooltipPosition="above" matTooltipClass="tooltip-blue">
+                                <mat-icon>circle</mat-icon>
+                            </span>
+                        </div>
                     </div>
                 </td>
             </tr>
