--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -6,6 +6,7 @@
   font-size: 20px;
   display: flex;
   align-items: center;
+  z-index: 1;
 }
 
 .calendar-table {
@@ -84,5 +85,53 @@
 
 .showTask {
   display: flex;
+  align-items: center;
   font-weight: 600;
+}
+
+.task-title-box {
+  margin-top: -22px;
+
+  span {
+    mat-icon {
+      font-size: 14px;
+      height: 14px;
+      width: 14px;
+
+      &:hover {
+        transform: scale3d(1.2, 1.2, 1.2);
+        transition: 225ms ease-in-out;
+      }
+    }
+  }
+}
+
+.info-btn {
+  position: absolute;
+  top: 18px;
+  left: 24px;
+  color: var(--header);
+
+  // mat-icon {
+  //   position: relative;
+  // }
+}
+
+.legend-card {
+  width: fit-content;
+  margin-left: 24px;
+  position: absolute;
+  top: 54px;
+  left: -20px;
+  border-radius: 24px;
+  background: #e5e8f5;
+
+  div {
+    display: flex;
+    align-items: center;
+
+    span {
+      font-weight: 600;
+    }
+  }
 }
