--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -1,12 +1,20 @@
 .calendar-header {
   color: var(--header);
-  margin-left: 6rem;
-  margin-top: 20px;
+  position: absolute;
+  top: 12px;
+  left: 100px;
   font-weight: 600;
   font-size: 20px;
   display: flex;
   align-items: center;
   z-index: 1;
+
+  button {
+    &:hover {
+      transform: scale3d(1.3, 1.3, 1.3);
+      transition: 225ms ease-in-out;
+    }
+  }
 }
 
 .calendar-table {
@@ -16,6 +24,7 @@
   margin-left: 6px;
   background-color: #fff;
   border-radius: 16px;
+  margin-top: 62px;
 }
 
 .calendar-table thead th {
@@ -108,13 +117,9 @@
 
 .info-btn {
   position: absolute;
-  top: 18px;
+  top: 12px;
   left: 24px;
   color: var(--header);
-
-  // mat-icon {
-  //   position: relative;
-  // }
 }
 
 .legend-card {
