--- a/src/app/dialog-task-details/dialog-task-details.component.html
+++ b/src/app/dialog-task-details/dialog-task-details.component.html
@@ -4,7 +4,7 @@
     </button>
 
     <div class="task-box">
-        <span class="category-box" [style.background-color]="getCategoryColor(taskData.category)">
+        <span class="category-box" [style.background-color]="shared.getCategoryColor(taskData.category)">
             {{ taskData.category }}
         </span>
 
