--- a/src/app/authentication-section/login/login.component.html
+++ b/src/app/authentication-section/login/login.component.html
@@ -4,14 +4,14 @@
         <mat-card-content>
             <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
                 <p>
-                    <mat-form-field>
+                    <mat-form-field class="input-shadow input-box height-36">
                         <input type="text" matInput placeholder="E-Mail" formControlName="email" required
                             autocomplete="off">
                     </mat-form-field>
                 </p>
 
                 <p>
-                    <mat-form-field>
+                    <mat-form-field class="input-shadow input-box height-36">
                         <input type="password" matInput placeholder="Password" formControlName="password" required
                             autocomplete="off">
                     </mat-form-field>
@@ -21,18 +21,21 @@
                     {{ error }}
                 </p>
 
-                <div class="align-center">
-                    <button type="submit" mat-raised-button color="warn">Sign in</button>
+                <div class="display-center">
+                    <div class="signIn-btn">
+                        Sign in
+                    </div>
                 </div>
             </form>
 
-            <p class="align-center or-text">
+            <p class="or-text">
                 <span>OR</span>
             </p>
 
             <div class="login-options-btn">
                 <button mat-button (click)="signInWithGoogle()">
-                    <label class="form-label">Login with Google</label>
+                    <img src="/../assets/img/google.png">
+                    Login with Google
                 </button>
 
                 <button mat-button (click)="guestLogin()">
@@ -41,7 +44,7 @@
             </div>
         </mat-card-content>
 
-        <p class="or-text align-center sign-up-btn">
+        <p class="or-text sign-up-btn">
             <label class="form-label"> Don't have an account?
                 <button mat-button routerLink="/register" class="text-danger">Sign up</button>
             </label>
