--- a/src/app/authentication-section/login/login.component.html
+++ b/src/app/authentication-section/login/login.component.html
@@ -2,7 +2,7 @@
     <mat-card class="login-card">
         <mat-card-title>Login</mat-card-title>
         <mat-card-content>
-            <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
+            <form [formGroup]="formLogin">
                 <p>
                     <mat-form-field class="input-shadow input-box height-36">
                         <input type="text" matInput placeholder="E-Mail" formControlName="email" required
@@ -22,7 +22,7 @@
                 </p>
 
                 <div class="display-center">
-                    <div class="signIn-btn">
+                    <div class="signIn-btn" (click)="loginUser()">
                         Sign in
                     </div>
                 </div>
