implement AuthStateChange to Auth Guard

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="account">
-            <button mat-icon-button routerLink="/login">
+            <button mat-icon-button (click)="logOut()">
                 <mat-icon>account_circle</mat-icon>
             </button>
         </div>
