--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <h3>{{ greeting }},</h3>
-                <h3>Anastasiia
+                <h3>{{ auth.userName }}
                     <mat-icon>waving_hand</mat-icon>
                 </h3>
             </div>
