--- a/src/app/task-section/dialog-task-details/dialog-task-details.component.html
+++ b/src/app/task-section/dialog-task-details/dialog-task-details.component.html
@@ -40,6 +40,11 @@
             <p>Assigned To:</p>
             <p [ngStyle]="{'color': taskData.bgColor}">{{ taskData.assignedTo }}</p>
         </span>
+
+        <span>
+            <p>Editor:</p>
+            <p>{{ taskData.editor }}</p>
+        </span>
     </div>
 
     <div class="button-box" *ngIf="!shared.archivDialog">
