add task as guest

--- a/src/app/authentication-section/login/login.component.html
+++ b/src/app/authentication-section/login/login.component.html
@@ -1,4 +1,8 @@
 <div class="register-container">
+    <div class="logo-box">
+        <h1>Join</h1>
+    </div>
+    
     <mat-card class="login-card">
         <mat-card-title>Login</mat-card-title>
         <mat-card-content>
