--- a/src/app/archiv/archiv.component.html
+++ b/src/app/archiv/archiv.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="tasks-box">
-        <div *ngIf="noTasks">
+        <div *ngIf="noTasks" class="noTasks-box">
             <h3>No tasks archived...</h3>
         </div>
 
