--- a/src/app/authentication-section/login/login.component.scss
+++ b/src/app/authentication-section/login/login.component.scss
@@ -240,7 +240,7 @@ mat-form-field {
         color: var(--header);
         margin-top: 18px;
         letter-spacing: -8px;
-        -webkit-text-stroke: 0.5px #0a0a0a80;
+        -webkit-text-stroke: 0.5px rgb(127 149 222);
         filter: drop-shadow(3px 0px 2px #ffffff);
 
         &:first-letter {
