--- a/src/app/contact-section/dialog-contact-tasks/dialog-contact-tasks.component.scss
+++ b/src/app/contact-section/dialog-contact-tasks/dialog-contact-tasks.component.scss
@@ -20,6 +20,7 @@ h2 {
     font-size: 24px;
     border-right: none;
     margin-top: 0;
+    margin-bottom: 0;
     margin-left: 16px;
     color: var(--header);
     font-weight: 600;
