--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -88,10 +88,6 @@
     }
 }
 
-// .active-btn-top {
-//     box-shadow: 0px 0px 6px 2px #f1e0fe;
-//     color: var(--header) !important;
-// }
 
 .account {
     padding-bottom: 36px;
@@ -104,6 +100,12 @@
         &:hover {
             transform: scale3d(1.1, 1.1, 1.1);
             transition: 225ms ease-in-out;
+        }
+
+        img {
+            width: 42px;
+            height: 42px;
+            border-radius: 50%;
         }
     }
 }
@@ -127,8 +129,8 @@
 }
 
 .active-btn-top {
-    box-shadow: inset 2px 2px 0px var(--bg-light), 
-                inset -1px -1px 11px #ffffff;
+    box-shadow: inset 2px 2px 0px var(--bg-light),
+        inset -1px -1px 11px #ffffff;
     transition: all 253ms cubic-bezier(1, 0.04, 0.66, 1.23);
     animation: pressed-btn 0.4s cubic-bezier(1, 0.04, 0.66, 1.23);
     color: var(--header) !important;
