add reset password

--- a/src/app/authentication-section/login/login.component.html
+++ b/src/app/authentication-section/login/login.component.html
@@ -52,6 +52,10 @@
             <label class="form-label"> Don't have an account?
                 <button mat-button routerLink="/register" class="text-danger">Sign up</button>
             </label>
+
+            <label class="form-label"> Forgot password?
+                <button mat-button (click)="openDialogResetPassword()" class="text-danger">Reset password</button>
+            </label>
         </p>
     </mat-card>
 </div>
