--- a/src/app/dialog-request/dialog-request.component.scss
+++ b/src/app/dialog-request/dialog-request.component.scss
@@ -1,6 +1,22 @@
+$fontFamily: 'Montserrat', sans-serif;
+$fontSize: 14px;
+$textColor: #6C7587;
+$height: 32px;
+
+$bgColor: #EBECF0;
+$iconColor: #8992A5;
+
+$accentBlue: #1657F0;
+$brightBlue: #36D7E0;
+
 $darkShadow: #484f60;
 $lightShadow: #FFFFFF;
-$bgColor: #EBECF0;
+
+$dropShadow: 8px 8px 12px -2px rgba($darkShadow, 0.4),
+    -6px -6px 12px -1px rgba($lightShadow, 1);
+
+$innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
+    inset 2px 2px 8px -1px rgba($darkShadow, 0.5);
 
 $dropShadow: 8px 8px 12px -2px rgba($darkShadow, 0.4),
     -6px -6px 12px -1px rgba($lightShadow, 1);
@@ -64,4 +80,98 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
             background: #647dfe69;
         }
     }
+}
+
+.mat-button-toggle-focus-overlay {
+    display: none;
+}
+
+
+
+@mixin size($width, $height: $width) {
+    width: $width;
+    height: $height;
+}
+
+@mixin applyFontStyle() {
+    font-family: $fontFamily;
+    font-size: $fontSize;
+    line-height: $fontSize;
+    color: $textColor;
+}
+
+%shared-styles {
+    @include applyFontStyle;
+    padding: 0 8px;
+    position: relative;
+    border: 2px solid rgba($lightShadow, 0);
+    outline: none;
+    text-align: start;
+    background-color: $bgColor;
+    transition: all 250ms ease-in-out;
+
+    &:hover {
+        box-shadow: none;
+        border-color: white;
+    }
+}
+
+.input-shadow {
+    @extend %shared-styles;
+    box-shadow: $innerShadow;
+    width: 20vw;
+    padding: 10px;
+    border-radius: 12px;
+    margin-bottom: 18px;
+
+    &:focus {
+        box-shadow: none;
+        border-color: rgba(var(--header), 0.5);
+    }
+
+    &::placeholder {
+        @include applyFontStyle;
+        opacity: 1;
+    }
+
+    mat-hint {
+        font-size: 10px !important;
+    }
+
+    ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-wrapper {
+        height: 36px;
+        padding-bottom: 0;
+        display: flex;
+        align-items: center;
+    }
+
+    mat-icon {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+}
+
+.height-36 {
+    height: 36px !important;
+}
+
+::ng-deep .mat-focused .mat-form-field-label {
+    color: var(--header) !important;
+}
+
+::ng-deep .mat-form-field-underline {
+    background-color: $bgColor !important;
+}
+
+::ng-deep .mat-form-field-ripple {
+    background-color: $bgColor !important;
+}
+
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-infix {
+    display: flex !important;
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-thick {
+    color: var(--header) !important;
 }
