add help videos

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         </div>
 
         <button mat-icon-button class="help-btn" matTooltip="Help" matTooltipPosition="above"
-            matTooltipClass="tooltip-blue">
+            matTooltipClass="tooltip-blue" routerLink="/help">
             <mat-icon>question_mark</mat-icon>
         </button>
     </nav>
